# HospitalManagementSystem

./: .excalidraw  pyproject.toml
app/: config.py  db.py
app/models/: doctor.py  pateints.py  users.py
